# RAG_Legal

./: .gitignore  README.md  important.txt  legal.py  main.py  pyproject.toml  requirements.txt
VectorDatabase2/fe665f85-583a-43be-af27-917d6ca7cb2a/: index_metadata.pickle
data/: memo_2_test.docx
data_output/: chunks.csv  graph.csv  graph_data.json  graph_data.pkl
docs/: index.html
notebooks/: Final_notebook.ipynb  Final_prototype.ipynb  LegalRAG.ipynb  LegalRAG10.ipynb  LegalRAG13.ipynb  LegalRAG8.ipynb  LegalRAG9.ipynb  Processing_&_chunking.ipynb  crewai_chatbot2.ipynb  fourth_Graph_RAG.ipynb  fourth_advaced_graphRAG.ipynb  fourth_graphRAG2.ipynb  third.ipynb  third_agentic_RAG.ipynb
notebooks/chroma_db_legal_bot_part1/813d1669-04e8-4178-a10a-4b49d1335abf/: index_metadata.pickle
notebooks/chroma_db_legal_bot_part1/e34a34b9-0052-4d52-b485-cf7bf26fe676/: index_metadata.pickle
notebooks/data_output/history/: chat_history.txt
notebooks/doc_chroma/dcde8f92-2f2b-46e8-8750-8a760ced7c5b/: index_metadata.pickle
notebooks/previous iterations/: LegalRAG10.ipynb  LegalRAG11.ipynb  LegalRAG12.ipynb  LegalRAG2.ipynb  LegalRAG3.ipynb  LegalRAG4.ipynb  LegalRAG5.ipynb  LegalRAG6.ipynb  LegalRAG7.ipynb  LegalRAG8.ipynb  LegalRAG_BERT.ipynb  LegalRAG_LangGraph.ipynb  first.ipynb  fourth_Graph_RAG.ipynb  fourth_advaced_graphRAG.ipynb  second_LegalRAG.ipynb
src/: engine.py  knowledge_base_ingest.py
system_prompts/: prompts.txt
vector_database/: chroma.sqlite3
vectorstores/kg/: chroma.sqlite3
vectorstores/text/: chroma.sqlite3  index_store.json
