[project]
name = "legal-rag-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock>=3.24.3",
    "gradio>=6.6.0",
    "groq>=1.0.0",
    "huggingface-hub>=1.4.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "packaging>=26.0",
    "pinecone>=7.0.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.3",
    "wordcloud>=1.9.6",
]
